# code-index

./: .flake8  .gitignore  .kilocodemodes  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE_IMPROVEMENT_PLAN.md  Ast-vibe_log.txt  BINARY_BUILD_README.md  CODE_REVIEW_REPORT.md  GITHUB_ACTIONS.md  Makefile  Makefile.windows  README.md  cleanup_outdated_files.sh  code_index.json  code_index_plan.txt  code_review_recommendations.md  codeindex_single_run.txt  debug_context.py  debug_integration.py  debug_tree_sitter.py  fix_imports.py  history.txt  list.txt  nuitka-crash-report.xml  performance_run.txt  pyproject.toml  pytest.ini  refactoring_sprints.md  requirements-dev.txt  requirements.txt  rust_optimized_config.json  test_config.json  test_embed_config.json  test_refactoring.py  test_robustness.py  test_simple.py  test_tree_sitter_fix.py  test_tree_sitter_real.py  test_tui_integration.py  (+2 more)
.github/workflows/: ci.yml  release.yml
.kilocode/rules-architect/: AGENTS.md
.kilocode/rules-ask/: AGENTS.md
.kilocode/rules-code/: AGENTS.md
.kilocode/rules-debug/: AGENTS.md
config/: code_index.json  test_codegeex_config.json  test_nomic_config.json
docs/: ARCHITECTURE_SUMMARY.md  CODE_REVIEW_2026-04-29.md  LOGIC_FLOW.md  README.md  USAGE.md  batch_indexing_guide.md  cli-reference.md  cli_vs_mcp_parity.md  collection_management.md  configuration-schema.md  configuration.md  enhanced_ignore_system.md  enhancement_summary.md  final_summary.md  fixes_summary.md  indexing_status_tracking.md  kilocode_compatibility.md  language-support.md  mcp_guided_fallback.md  mcp_search_enhancements.md  mmap_file_reading.md  quick_start.md  scalability_features.md  sprint_planning.md  test_codebase_alignment_analysis.md  tree_sitter_filtering_system.md  tree_sitter_integration.md  treesitter_upgrade_analysis.md
docs/development/: GETTING_STARTED.md  Makefile  PROJECT_STRUCTURE.md  SUMMARY.md
docs/mcp-server/: README.md  api-reference.md  benchmarking-guide.md  configuration-examples.md  performance-optimization.md  troubleshooting.md
graphify-out/: .graphify_analysis.json  .graphify_chunk_1.json  .graphify_chunk_2.json  .graphify_chunk_3.json  .graphify_detect.json  .graphify_labels.json  .graphify_python  .graphify_uncached.txt  GRAPH_REPORT.md  cost.json  graph.html  manifest.json
scripts/: README.md  run_search_validation.sh  setup_venv.sh
scripts/run/: run_benchmark.py  run_demos.py  run_env_check.py  run_install_test.py  run_tests.py
scripts/utilities/: batch_indexer.py  check_status.py  collection_summary.py  delete_all_collections.py  migrate_to_kilocode.py  ts_dump_node_types.py  ts_dump_symbols.py
tests/: README.md  TEST_SUMMARY.md  __init__.py  conftest.py  test_basic.py  test_cache_cleanup.py  test_cli.py  test_cli_json_output_schema.py  test_cli_new_commands.py  test_collections_additional.py  test_collections_cli.py  test_config_roundtrip.py  test_config_service.py  test_configuration_service.py  test_dot_file_filtering.py  test_e2e_kilocode_compatibility.py  test_embedding.py  test_error_handler.py  test_file_processing_service.py  test_gitignore.py  test_ignore_patterns.py  test_ignore_system.py  test_index_payload_model_key.py  test_indexing_service.py  test_installation.py  test_kilocode_compatibility.py  test_language_detection.py  test_mcp_collections_tool.py  test_mcp_config_manager.py  test_mcp_error_handler.py  test_mcp_index_tool.py  test_mcp_integration.py  test_mcp_operation_estimator.py  test_mcp_progress_reporter.py  test_mcp_runner.py  test_mcp_search_tool.py  test_mcp_server.py  test_mcp_server_clean.py  test_metadata.py  test_metadata_storage.py  (+39 more)
(+218 files in other folders)
