[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "code-index"
version = "0.1.0"
description = "Standalone code indexing tool using Ollama and Qdrant"
readme = "README.md"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.13"
dependencies = [
    "qdrant-client==1.15.1",
    "requests>=2.31.0",
    "click>=8.1.0",
    "tqdm>=4.65.0",
    "tree-sitter==0.25.1",
    "tree-sitter-language-pack==0.9.0",
    "langchain-text-splitters>=0.2.0",
    "pygments>=2.13.0",
    "fastmcp>=2.12.0",
    "whats-that-code",
]

[project.scripts]
code-index = "code_index.cli:cli"
code-index-mcp = "code_index.mcp_server.server:sync_main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "click>=8.1.0",
    "pytest-asyncio>=1.1.0",
]

[tool.black]
line-length = 88
target-version = ['py313']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
