[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "code-index"
version = "0.1.0"
description = "Standalone code indexing tool using Ollama and Qdrant"
readme = "README.md"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.13"
dependencies = [
    "qdrant-client>=1.17.1",
    "requests>=2.33.1",
    "click>=8.3.3",
    "tqdm>=4.67.3",
    "tree-sitter==0.25.2",
    "tree-sitter-language-pack==1.6.2",
    "pygments>=2.20.0",
    "fastmcp>=3.2.4",
    "whats-that-code",
    "psutil>=7.2.2",
    "chardet>=7.4.3",
    "nuitka==4.0.8",
    "magika==1.0.2",
    "rich>=15.0.0",
    "onnxruntime==1.25.0",
    "numpy>=2.4.4",
    "anyio>=4.13.0",
    "urllib3>=2.6.3",
    "pydantic>=2.13.3",
    "pydantic-core>=2.46.3",
    "pydantic-settings>=2.14.0",
    "zstandard>=0.25.0",
]

[project.scripts]
code-index = "code_index.cli:cli"
code-index-mcp = "code_index.mcp_server.server:sync_main"

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "black>=26.3.1",
    "ruff>=0.15.12",
    "flake8>=7.3.0",
    "mypy>=1.20.2",
    "click>=8.3.3",
    "pytest-asyncio>=1.3.0",
]

[tool.black]
line-length = 88
target-version = ['py313']

[tool.nuitka]
# Optimized flags for Intelligence Binaries
standalone = true
onefile = true
python-flag = ["no_asserts", "no_docstrings"]
nofollow-import-to = ["*.tests", "*.pytest", "pytest", "tests"]
enable-plugin = ["anti-bloat"]
# Avoid including setuptools in the final binary
noinclude-setuptools-mode = "nofollow"
noinclude-pytest-mode = "nofollow"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]


[tool.ty]
exclude = ["tests/**", "scripts/**"]

[tool.ruff.lint]
per-file-ignores = { "tests/*" = ["F401", "F811"] }

[tool.ruff]
respect-gitignore = true
